[package]
name = "tasktree"
version = "0.1.0"
authors = ["Malte Brandy <malte.brandy@maralorn.de>"]

[dependencies]
task-hookrs = "0.3.0"
uuid = { version = "0.4", features = ["serde"] }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
gtk = { version = "0.1.3", default-features = false,features = ["v3_22"]}
gdk = { version = "0.5.3", default-features = false}
regex = "0.2"
lazy_static = "0.2"
