[package]
name = "tasktree"
version = "0.1.0"
authors = ["Malte Brandy <malte.brandy@maralorn.de>"]

[dependencies]
task-hookrs = "0.3.0"
uuid = { version = "0.4", features = ["serde"] }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
gtk = { version = "0.7", default-features = false,features = ["v3_18"]}
gdk = { version = "0.11", default-features = false}
glib = { version = "0.8", default-features = false}
regex = "0.2"
lazy_static = "0.2"

[features]
default = ["set_project", "set_project_tag"]

set_project = []
set_project_tag = []
